Major refactoring and code cleanup

--- a/www/help.html
+++ b/www/help.html
@@ -116,6 +116,8 @@ shortened to about 10 characters each, a maximum of about 200 names
 can be handled in the URL. For a longer list, pasting into the dialog
 box should work.
 </li>
+<li>Specify <tt>reset=1</tt> in the URL to clear all sessions. 
+</li>
 <li>An undocumented parameter <tt>stats=1</tt> can be specified to verify 
 the randomness of the selection algorithm. 
 </li>
