--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
 <title>Qwheel Help</title>
@@ -11,7 +10,7 @@ max-width: 960px;
 </head>
 
 <body>
-<h1>Qwheel: Question Wheel</h1>
+<h1><a href="http://code.mitotic.org/Qwheel">Qwheel: Question Wheel</a></h1>
 
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
@@ -124,6 +123,3 @@ the randomness of the selection algorithm.
 </li>
 </ol>
 </body> </html>
-=======
-My Page
->>>>>>> ed5078136381e2ba0d1ec5032a3d99ef859cf072
