--- a/www/help.html
+++ b/www/help.html
@@ -10,7 +10,7 @@ max-width: 960px;
 </head>
 
 <body>
-<h1>Qwheel: Question Wheel</h1>
+<h1><a href="http://code.mitotic.org/Qwheel">Qwheel: Question Wheel</a></h1>
 
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
