--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title></title>
-   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
    <script type="text/javascript" src="jquery-ui.min.js"></script>
    <script type="text/javascript" src="src/rouletteWheel.js"></script>
    <script type="text/javascript">
