--- a/www/help.html
+++ b/www/help.html
@@ -10,7 +10,7 @@ max-width: 960px;
 </head>
 
 <body>
-<h1><a href="http://code.mitotic.org/Qwheel">Qwheel: Question Wheel</a></h1>
+<h1><a href="https://mitotic.github.io/Qwheel">Qwheel: Question Wheel</a></h1>
 
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
@@ -64,7 +64,7 @@ can generate a permanent URL for creating a new session. Start with a
 list of semicolon- or comma-separated names. If there are any spaces
 within names, replace them with plus (+) signs. Then generate a URL
 string that looks like this: <br> <tt><a
-href="http://code.mitotic.org/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith">http://code.mitotic.org/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith</a></tt>
+href="https://mitotic.github.io/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith">https://mitotic.github.io/wheel/?session=math101&names=Jane+Doe;John+Doe;John+Smith</a></tt>
 
 This URL can be stored in a file and reused to restart a session, as
 needed. Note that the query symbol (<tt>?</tt>) denotes the start of
@@ -81,16 +81,16 @@ can be entered manually via a dialog box.
 
 <b>Sample URLs</b>:<br>
 <tt><a
-href="http://code.mitotic.org/wheel/">http://code.mitotic.org/wheel/</a></tt>
+href="https://mitotic.github.io/wheel/">https://mitotic.github.io/wheel/</a></tt>
 <em>Enter names via dialog box for default session</em>
 <br>
 <tt><a
-href="http://code.mitotic.org/wheel/?names=JohnS,JaneD">http://code.mitotic.org/wheel/?names=JohnS,JaneD</a></tt>
+href="https://mitotic.github.io/wheel/?names=JohnS,JaneD">https://mitotic.github.io/wheel/?names=JohnS,JaneD</a></tt>
 <em>Default session, comma-separated first names+last initials</em>
 <br>
 <tt><a
-href="http://code.mitotic.org/wheel/?session=calc101&max=15&names=John+Smith,
-jr.;Jane+Doe">http://code.mitotic.org/wheel/?session=calc101&max=15&names=John+Smith,jr.;Jane+Doe</a></tt>
+href="https://mitotic.github.io/wheel/?session=calc101&max=15&names=John+Smith,
+jr.;Jane+Doe">https://mitotic.github.io/wheel/?session=calc101&max=15&names=John+Smith,jr.;Jane+Doe</a></tt>
 <em>Named session, semicolon-separated names, max. display of 15 names</em>
 
 <p></p>
