Allow display of full name on selection, but short name in the wheel

--- a/www/help.html
+++ b/www/help.html
@@ -116,6 +116,10 @@ shortened to about 10 characters each, a maximum of about 200 names
 can be handled in the URL. For a longer list, pasting into the dialog
 box should work.
 </li>
+<li>If you want Qwheel to display a full name upon selection, but a
+shorter name on the wheel, then use the syntax
+<tt>shortname/fullname</tt> for each name in the URL.
+</li>
 <li>Specify <tt>reset=1</tt> in the URL to clear all sessions. 
 </li>
 <li>An undocumented parameter <tt>stats=1</tt> can be specified to verify 
