Updated licensing details

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <!--
+The MIT License (MIT)
+Copyright (c) 2016-2018 Ramalingam Saravanan <sarava@sarava.net>
+-->
+
+<!--
 Action parameters
 ?clear=1:   Delete current session
 ?reset=1:   Delete current session and reload page (creating new session)
