Tweaked license info

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!--
+Qwheel: Question Wheel (https://github.com/mitotic/Qwheel)
 The MIT License (MIT)
 Copyright (c) 2016-2018 Ramalingam Saravanan <sarava@sarava.net>
 -->
