--- a/index.html
+++ b/index.html
@@ -28,24 +28,25 @@
                 </ul></nav>
         </header><!-- /#banner -->
 
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-<h1><a href="/Qwheel">Qwheel: Question Wheel</a></h1>
+<h1><a href="/Qwheel">Qwheel: Question wheel</a></h1>
 
 A common problem facing teachers is that if you pose a question to a
 class, the same few students, usually in the first row, answer
 them. These students are typically not representative of the class,
 being more advanced and/or paying attention. To get around this
-problem, Qwheel uses a spinning "prize wheel" image (+sound) to
+problem, <tt>Qwheel</tt> uses a spinning "prize wheel" image (+sound) to
 randomly select a name from a list. Once a name is selected, it is
 removed from the list (although this behavior can be
-suppressed). Using Qwheel is a great way to fairly distribute
+suppressed). Using <tt>Qwheel</tt> is a great way to fairly distribute
 questions in the class, get to know the names of your
 students, and keep them attentive.
 <p></p>
 <img src="https://github.com/mitotic/Qwheel/blob/master/www/img/screenshot.png?raw=true" height=300 align=middle>
 <p></p>
 
+To use <tt>Qwheel</tt>, visit <a href="https://mitotic.github.io/wheel" target="_blank"><b>https://mitotic.github.io/wheel</b><a>	
+<p></p>
+		
 <b>Setup</b>: No accounts or logins required! Create a list of names
 from the class roster. You can use full names, or an abbreviated form,
 such as first name plus enough letters from the last name to make it
@@ -143,6 +144,8 @@ box should work.
 the randomness of the selection algorithm. 
 </li>
 </ol>
+        <footer id="contentinfo" class="body">
+                <address id="about" class="vcard body">
                 </address><!-- /#about -->
         </footer>
 
