--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
     <link title="defaultstyle" rel="stylesheet" type="text/css" href="/main.css">
+    <style>
+    body { margin: 4em; }
+    </style>
 
   </head>
 
